# pyguibank

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build_env_macos.yml  build_env_win64.yml  build_environment_win64.yml  build_macos.sh  build_macos_client.sh  build_plugins.bat  build_pyguibank.bat  build_win64.bat  build_win64_client.bat  config.ini  config_template.ini  dev_env_macos.yml  dev_env_win64.yml  dev_environment.yml  env_win.yml  environment.yml  init_db.json  init_statement_types.json  move_plugins.py  pyguibank_setup.nsi  pyproject.toml  setup.py
assets/: default_pipeline.mdl  init_statement_types.json
scripts/: deploy_macos_client.sh  deploy_plugins.sh  deploy_win64_client.sh  win64_installer.nsi
src/: build_plugins.py  import_tester.py  main.py  plugin_tester_local.py  print_statement_types.py  pyguibank.py  pyguibank_train.py  test_import.py  test_plugins.py  test_reader.py  version.py
src/core/: categorize.py  client.py  cluster.py  compare_models.py  config.py  db.py  dialog.py  import_statements.py  init.py  initialize.py  interfaces.py  learn.py  logging.py  missing.py  orm.py  parse.py  plot.py  plots.py  plugins.py  query.py  reports.py  send.py  server.py  settings.py  statements.py  threads.py  utils.py  validation.py
src/gui/: accounts.py  import_tester.py  main_window.py  plugins.py  preferences.py  send.py  statements.py  transactions.py
src/parse/: amazonbus.py  amazonper.py  citi.py  fedloan.py  fidelity401k.py  fidelityhsa.py  hehsa.py  occuauto.py  occubank.py  occucc.py  parse.py  transamerica.py  usbank.py  utils.py  vanguard.py  wfbus.py  wfper.py  wfploan.py
src/parsers/: amazonbus.py  amazonper.py  citi.py  fidelity401k.py  fidelityhsa.py  hehsa.py  occuauto.py  occubank.py  occucc.py  transamerica.py  usbank.py  vanguard.py  wfbus.py  wfper.py  wfploan.py
src/plugins/: __init__.py  csv_amazonper.py  csv_mohela.py  csv_occuauto.py  pdf_capitaloneauto.py  pdf_citicc.py  pdf_fidelity401k.py  pdf_fidelityhsa.py  pdf_hehsa.py  pdf_occubank.py  pdf_occucc.py  pdf_transamerica.py  pdf_usbankreicc.py  pdf_vanguard.py  pdf_wfbankbusiness.py  pdf_wfbankpersonal.py  pdf_wfploan.py  (+2 more)
tests/: test_plugins.py  test_reader.py
(+48 files in other folders)
