[project]
name = "pyguibank"
version = "1.0.1"
description = "A Python app for managing bank statements with PyQt GUI."
authors = [
    { name = "Tobias Brown-Heft", email = "tbrownhe@gmail.com" }
]
dependencies = [
    "pyqt",
    "loguru",
    "openpyxl",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "seaborn",
    "sqlalchemy",
    "nltk",
    "requests>=2.32,<3",
    "python-dotenv",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pdfplumber==0.11.4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyinstaller]
version = "5.13"
nsis = true

[tool.conda]
channels = ["conda-forge", "defaults"]

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v5.0.0", hooks = [
        { id = "check-added-large-files" },
        { id = "check-toml" },
        { id = "check-yaml", args = ["--unsafe"] },
        { id = "end-of-file-fixer" },
        { id = "trailing-whitespace" },
        { id = "no-commit-to-branch", args = ["--branch", "main"] }
    ] },
    { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.9.2", hooks = [
        { id = "ruff", args = ["--fix"], additional_dependencies = ["ruff==0.9.2"] }
    ] },
    { repo = "https://github.com/pre-commit/mirrors-isort", rev = "v5.10.1", hooks = [
        { id = "isort", args = ["--profile", "black"] }
    ] },
    { repo = "https://github.com/psf/black", rev = "24.10.0", hooks = [
        { id = "black", args = ["--line-length", "120"] }
    ] }
]

[tool.ruff]
line-length = 120
lint.extend-select = ["E"]
lint.ignore = ["E203"]
